<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mtype"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbGeneric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen" />

        <RadioButton
            android:id="@+id/rbTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo" />

        <RadioButton
            android:id="@+id/rbInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <RadioButton
            android:id="@+id/rbProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/probl" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mcontent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nuovomess"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:ems="10"
        android:inputType="textMultiLine" >

    </EditText>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="add"
        android:text="@string/aggiungi" />

</LinearLayout>