<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    android:orientation="vertical" >



<EditText

    android:id="@+id/inputData"

    android:layout_width="wrap_content"

    android:layout_height="wrap_content"

    android:layout_alignParentRight="true"

    android:layout_toRightOf="@+id/TextView01"

    android:hint="Inserisci il valore"

    android:text="" >

</EditText>



<Button

    android:id="@+id/bottone1"

    android:layout_width="wrap_content"

    android:layout_height="wrap_content"

    android:text="@string/Bottone1" />



<TextView

    android:id="@+id/outData"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/outData" />





<TextView

    android:id="@+id/tab"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/tab" />



<TextView

    android:id="@+id/TextView2"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/tab2" />



<TextView

    android:id="@+id/Info1"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/tab2" />



<TextView

    android:id="@+id/Info2"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/tab2" />



<TextView

    android:id="@+id/Info3"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:text="@string/tab2" />





<Button

    android:id="@+id/addbutton"

    android:layout_width="wrap_content"

    android:layout_height="wrap_content"

    android:text="@string/addmess" 

	android:onClick="add"/>



</LinearLayout>