<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/top_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/login_key" />

       

        <TableRow android:layout_gravity="right" >

            <TextView android:text="@string/mail" />

            <EditText
                android:id="@+id/mail"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="reset"
        android:text="@string/reset" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/reset_button"
        android:onClick="invia"
        android:text="@string/invia" />

    <CheckBox
        android:id="@+id/resta_connesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/resta_connesso" />

</RelativeLayout>
